# python-ibmdb-django

./: .gitignore  .travis.yml  README.md  pyproject.toml  pytest.ini  setup.py
iseries/: __init__.py  base.py  client.py  compiler.py  creation.py  introspection.py  operations.py  pybase.py  query.py  schemaEditor.py
src/django_iseries/: __init__.py  base.py  compiler.py  introspection.py  operations.py  pybase.py  schemaEditor.py
src/iseries/: __init__.py  base.py  client.py  introspection.py  operations.py  query.py  schemaEditor.py
tests/: models.py  settings.py  test_iseries.py
