[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "django_iseries"
author = "Steven James"
author-email = "steven@waitforitjames.com"
requires = ['pyodbc>=4.0.27', 'django>=2.2.0', 'pytz', 'sqlparse']
requires-python = ">=3.6"
classifiers=['Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: Microsoft :: Windows :: Windows NT/2000',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS',
    'Topic :: Database :: Front-Ends'
]
